MODIDICACION PESTAÑA 6 - ITEM 3

--- a/styleTema2.css
+++ b/styleTema2.css
@@ -5611,7 +5611,7 @@ data-title {
 * PESTAÑA 6 - ITEM 3
 -------------------------------*/
 
-.box{
+.boxes{
 	margin: -20px -10px;
   width: 890px;
   height: 120px;
