--- a/styleActividad3.css
+++ b/styleActividad3.css
@@ -1482,6 +1482,7 @@ body {
 /*--------------------------
 * TEMA 2 - PESTAÑAS
 ---------------------------*/
+
 .menu__tabs {
   list-style: none;
   overflow: hidden;
@@ -1620,4 +1621,406 @@ body {
 
 #item-1 {
   background: linear-gradient(to top, #ffcccc 0%, #ffffff 100%);
+}
+
+/*--------------------------
+* COMPUTADOR
+---------------------------*/
+
+/* IE7 */
+.clearfix:before,
+.clearfix:after {
+  content: "";
+  display: table;
+}
+
+.clearfix:after {
+  clear: both;
+}
+
+.clearfix {
+  zoom: 1;
+  /* For IE 6/7 (trigger hasLayout) */
+}
+
+.wrap {
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  background-color: #22262b;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.comp {
+  width: 100%;
+  height: 194px;
+  text-align: center;
+  margin: -340px 200px;
+}
+.comp .monitor {
+  width: 275px;
+  height: 181px;
+  display: block;
+  margin: 0 auto;
+  border-radius: 10px 10px 0px 0px;
+  padding: 9px;
+  border: solid 1px #e0e2e2;
+  background-color: black;
+}
+.comp .mid {
+  float: left;
+  display: block;
+  height: 100%;
+  position: relative;
+  background-color: #abadc6;
+  width: 50%;
+}
+.comp .mid.codigo {
+  background-color: #22262b;
+}
+.comp .site {
+  overflow: hidden;
+  position: absolute;
+  width: 105px;
+  height: 138px;
+  bottom: 0;
+  right: 0;
+}
+.comp .site .topbar {
+  width: 100%;
+}
+.comp .site .cerrar {
+  width: 100%;
+  padding: 3px;
+  line-height: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  border-radius: 4px 4px 0px 0px;
+  background-color: #afa895;
+}
+.comp .site .cerrar > div {
+  display: inline-block;
+  width: 2px;
+  height: 2px;
+  border-radius: 50%;
+  background: white;
+  margin: 0px 1px;
+}
+.comp .site .inhead {
+  padding: 2px;
+  height: 5px;
+  background-color: #ddd8cf;
+}
+.comp .site .inhead .item {
+  width: 10px;
+  height: 1px;
+  background-color: #d1c9bf;
+  margin: 0 1px;
+  display: block;
+  float: left;
+}
+.comp .txr {
+  text-align: right;
+}
+.comp .txr .item {
+  float: right;
+}
+.comp .inslid {
+  width: 100%;
+  height: 33px;
+  background-color: #efebe2;
+}
+.comp .incont {
+  padding-top: 10px;
+  background: #fefaf0;
+}
+.comp .incont .item {
+  background-color: #d1c9bf;
+  width: 53px;
+  height: 2px;
+  display: block;
+  margin: 0 auto;
+  margin-top: 1px;
+}
+.comp .incont .item:nth-child(1) {
+  width: 20px;
+}
+.comp .incont .item:nth-child(2) {
+  margin-top: 3px;
+  width: 41px;
+}
+.comp .incont .item:nth-child(3) {
+  width: 32px;
+}
+.comp .incont .item:nth-child(4) {
+  width: 23px;
+}
+.comp .incont .wid {
+  width: 100%;
+  padding: 8px 1px;
+}
+.comp .incont .wid .itwid {
+  width: 33.333%;
+  float: left;
+  height: 26px;
+  padding: 0px 3px;
+}
+.comp .incont .wid .itwid > div {
+  width: 100%;
+  height: 100%;
+  background-color: #f5f1e6;
+  position: relative;
+}
+.comp .incont .wid .itwid > div .contfoot {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 6px;
+  width: 100%;
+  background-color: #ebe5dc;
+}
+.comp .incont .infoot {
+  background-color: #efebe2;
+  height: 26px;
+  width: 100%;
+}
+@-webkit-keyframes code {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+@keyframes code {
+  0% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0.6;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+.comp .codigo {
+  padding: 14px 0px 14px 14px;
+}
+
+.comp .codigo .var {
+  background-color: #ac5e47;
+  -webkit-animation: code;
+          animation: code;
+  -webkit-animation-duration: 0.3s;
+          animation-duration: 0.3s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+}
+
+.comp .codigo .cont {
+  background-color: #464748;
+  -webkit-animation: code;
+          animation: code;
+  -webkit-animation-duration: 0.5s;
+          animation-duration: 0.5s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+}
+
+.comp .codigo .fun {
+  background-color: #fbb053;
+  -webkit-animation: code;
+          animation: code;
+  -webkit-animation-duration: 0.2s;
+          animation-duration: 0.2s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+}
+.comp .codigo .atr {
+  background-color: #645572;
+  -webkit-animation: code;
+          animation: code;
+  -webkit-animation-duration: 0.1s;
+          animation-duration: 0.1s;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+}
+
+.comp .codigo .item {
+  height: 3px;
+  width: 20px;
+  float: left;
+  margin-right: 3px;
+}
+
+.comp .codigo .item.min {
+  width: 13px;
+}
+
+.comp .codigo .item.lrg {
+  width: 30px;
+}
+
+.comp .codigo .line {
+  padding: 2px 0;
+  width: 100%;
+}
+
+.comp .codigo .tab1 {
+  padding-left: 5px;
+}
+
+.comp .codigo .tab2 {
+  padding-left: 8px;
+}
+
+.comp .codigo .tab3 {
+  padding-left: 10px;
+}
+
+.comp .codigo .tab4 {
+  padding-left: 12px;
+}
+
+.base {
+  width: 338px;
+  height: 12px;
+  background: #e0e2e2;
+  display: block;
+  margin: 0 auto;
+  border-radius: 0px 0px 6px 6px;
+}
+
+/*--------------------------
+* CAJA DE TEXTO
+---------------------------*/
+
+.box-shadow {
+  width: 300px;
+  height: 200px;
+  background-color: #ffcc66;
+  border-radius: 8px;
+  padding: 20px;
+  margin: 90px 130px;
+  color: #000000;
+  font-family: Sansita;
+  font-size: 30px;
+  text-align: center;
+  box-shadow: 0 0 30px 2px #ff9933;
+  box-sizing: border-box;
+  -webkit-animation: shadow-anim 2s infinite;
+          animation: shadow-anim 2s infinite;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear;
+  font-weight: bold;
+}
+
+@-webkit-keyframes shadow-anim {
+  0% {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);
+  }
+  50% {
+    box-shadow: 0 0 50px 2px #ff9933;
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);
+  }
+}
+
+@keyframes shadow-anim {
+  0% {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);
+  }
+  50% {
+    box-shadow: 0 0 50px 2px #ff9933;
+  }
+  100% {
+    box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.1);
+  }
+}
+
+/*--------------------------
+* BOTON
+---------------------------*/
+
+.wrapper {
+  position: absolute;
+  top: 90%;
+  left: 90%;
+  transform: translate(-50%, -50%);
+  width: 180px;
+  height: 90px;
+}
+
+.btn {
+  position: relative;
+  display: inline-block;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  background-color: #30336b;
+  font-size: 20px;
+  font-weight: bold;
+  color: #000000;
+  border-radius: 10px;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  padding: px 50px;
+  box-shadow: 0 6px #e23636;
+  transition: all .2s;
+  width: 150px;
+  font-family: 'Open Sans', sans-serif;
+  margin-left: 400px;
+  top: -20px;
+}
+
+.btn:hover {
+  transform: translateY(3px);
+  box-shadow: 0 4px #e23636;
+}
+
+.btn:active {
+  transform: translateY(6px);
+  box-shadow: none;
+}
+
+.btn:active::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+}
+
+.btn-after {
+  background-color: #ea5d5d;
+}
+
+.btn-after::after {
+  background-color: #ea5d5d;
+}
+
+.btn::after {
+  content: "";
+  position: absolute;
+  display: inline-block;
+  height: 100%;
+  width: 150px;
+  border-radius: 10px;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s;
+}
+
+.btn-animated {
+  animation: animateButton .5s ease-out .75s;
+  animation-fill-mode: backwards;
+}
+
+#item-2 {
+  background: linear-gradient(to bottom, #ffffff 0%, #000000 100%);
 }
