--- a/styleActividad3.css
+++ b/styleActividad3.css
@@ -975,6 +975,9 @@ body {
   transition: all .2s;
   width: 150px;
   font-family: 'Open Sans', sans-serif;
+   text-align: center;
+  height: 40px;
+  padding: 5px;
 }
 
 .btn:hover {
