--- a/styleTema2.css
+++ b/styleTema2.css
@@ -68,62 +68,6 @@ h4{
   font-style: italic;
 }
 
-/*header {
-  background: #161616;
-  border-bottom: 1px solid #1C1C1C;
-  box-shadow: 1px 0 2px rgba(0,0,0,.5);
-  color: #FFF;
-  display: flex;
-  justify-content: space-between;
-  padding: 10px 10px;
-  position: fixed;
-  top: 0;
-  left: 0px;
-  right: 0;
-  vertical-laign: middle;
-  z-index: 9;
-  height: 48px;
-  width: 2000px;
-  -webkit-transform: translate3d(0,0,0);
-     -moz-transform: translate3d(0,0,0);
-          transform: translate3d(0,0,0);
-  -webkit-transition: all 500ms ease-in-out;
-     -moz-transition: all 500ms ease-in-out;
-          transition: all 500ms ease-in-out;
-}
-
-header [class*="menu-"] {
-  cursor: pointer;
-  font-size: 22px;
-  height: initial;
-  padding: 0px;
-  width: initial;
-}
-header h1 {
-  color: #FFF;
-  font-size: 24px;
-  font-weight: 100;
-  padding: 0;
-  text-shadow: 0 1px 2px rgba(0,0,0,.5);
-}
-.intro {
-  display: block;
-  top: -96px;
-  margin-right: auto;
-  height: 670px;
- /* padding: 22.5%;
-  background-color: #507DBC;
-  left: 205px;
-  
-  z-index:1;
-  -webkit-transform: translate3d(0,0,0);
-     -moz-transform: translate3d(0,0,0);
-          transform: translate3d(0,0,0);
-  -webkit-transition: all 500ms ease-in-out;
-     -moz-transition: all 500ms ease-in-out;
-          transition: all 500ms ease-in-out;
-}*/
-
 /*--------------------------
 * CAPAS DEL CONTENIDO
 ---------------------------*/
@@ -158,18 +102,6 @@ header h1 {
     top: 5px;
     left: -4px;
   }
-
- /* #pointer:after {
-    content: "";
-    position: absolute;
-    left: -20px;
-    bottom: 0;
-    width: 0;
-    height: 0;
-    border-left: 15px solid white;
-    border-top: 21px solid transparent;
-    border-bottom: 21px solid transparent; 
-  }*/
 
   #pointer:before {
     content: "";
@@ -230,101 +162,12 @@ header h1 {
     border-radius: 5px;
 }
 
-/*OTRAS PESTAÑAS*/
-/* ==TABS TO THE RIGHT OF ME== */
-/*
-.tab-body-container {
-  position: relative;
-  margin-top: -14px;
-  padding: 0px;
-  height: 800px;
-}
-
-.tab-group {
-  list-style: none;
-height: 34px;
-margin-bottom: 0px !important;
-position: relative;
-right: 0;
-
-}
-
-.tab-group li {
-  float: right;
-display: inline-block;
-padding: 3px 17px;
-color: #FFF;
-cursor: pointer;
-background: #808285;
-margin-right: 0px;
-border-right: 1px solid #c0c3c8;
-margin: -11px 2px;
-border-radius: 5px 5px 0px 0px;
-width: 44px;
-font-weight: bold;
-}
-
-.tab-current {
-  background: #3e7898 !important;
-}
-
-.tab-group li:first-child {
-  border-right: 0px !important;
-}
-
-.body-group {
-      background: #FFF;
-    margin: -10px;
-    padding: 0px;
-    width: 947px;
-    height: 465px;
-    margin-left: 10px;
-    border-radius: 5px 0px 5px 5px;
-}
-
-.body-group li {
-  list-style: none;
-  display: none;
-  position: relative;
-  padding: 15px;
-}
-
-/* ==TABS TO THE LEFT OF ME== */
-/*
-.tab-body-container-secondary .tab-group {
-  padding: 0px;
-}
-
-.tab-body-container-secondary .tab-group li {
-  float: left;
-  background: #b4c4d4;
-  border-right: 1px solid #dde8f3;
-}
-
-.tab-body-container-secondary .tab-group li:first-child {
-  border-right: 1px solid #dde8f3 !important;
-}
-
-.tab-body-container-secondary .tab-group li:last-child {
-  border-right: 0px !important;
-}
-
-.tab-body-container-secondary .body-group {
-  background: #e7e8e9 !important;
-}
-
-.white-bgk {
-  background: #FFF;
-  margin: -15px -15px;
-  padding: 10px 4px;
-}*/
-
 /*--------------------------------
 * IMAGEN DE INDICACION - PESTAÑAS
 ----------------------------------*/
 
 #iPestaña {
-  margin: -5px -237px;
+  margin: 5px -237px;
 }
 
 /*--------------------------
@@ -1584,65 +1427,6 @@ margin-top: -12px;
   margin: 205px 40px;
 }
 
-
-/*
-#arrowAnim {
-  
-  height: 50vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.arrow {
-  width: 2vw;
-  height: 2vw;
-  border: 0.5vw solid;
-  border-color: #66ff66 transparent transparent #66ff66;
-}
-
-
-
-.right {
-  transform: rotate(135deg); 
-}
-
-
-
-.arrowSlidingR {
-  position: absolute;
-  -webkit-animation: slideR 1.4s linear infinite;
-  animation: slideR 1.4s linear infinite;
-}
-
-.delay1 {
-  -webkit-animation-delay: 0.5s;
-  animation-delay: 0.5s;
-}
-.delay2 {
-  -webkit-animation-delay: 1s;
-  animation-delay: 1s;
-}
-.delay3 {
-  -webkit-animation-delay: 1.5s;
-  animation-delay: 1.5s;
-}
-
-
-
-@-webkit-keyframes slideR {
-  0% { opacity:0; transform: translateX(-3vw); }
-  20% { opacity:1; transform: translateX(-1vw); }
-  80% { opacity:1; transform: translateX(1vw); }
-  100% { opacity:0; transform: translateX(3vw); }
-}
-@keyframes slideR {
-  0% { opacity:0; transform: translateX(-3vw); }
-  20% { opacity:1; transform: translateX(-1vw); }
-  80% { opacity:1; transform: translateX(1vw); }
-  100% { opacity:0; transform: translateX(3vw); }
-}*/
-
 /*-----------------------------
 * TEMA 2 - PESTAÑA 3 
 -------------------------------*/
@@ -2220,17 +2004,17 @@ margin: auto;
 .letrasP3 h1 {
 cursor: default;
 position: fixed;
-top: 10px;
+top: -15px;
 left: -190px;
 right: 0;
 bottom: 0;
 height: 10px;
 margin: 185px;
 display: block;
--webkit-animation: bounce .9s ease infinite alternate;
+
 font-family: 'Erica One', cursive;
 font-size: 50px;
-color: #99CCFF;
+color: #127cd4;
 text-align: center;
 line-height: 100px;
 
@@ -2686,19 +2470,31 @@ margin: 262px 235px;
 }
 
 #sumaArbol{
-margin:-20px -210px;
+margin: 20px -200px;
+height: 250px;
+width: 250px;
+-webkit-animation: pulse 5s infinite;
 }
 
 #toList{
-margin:-10px -210px;
+margin: 20px -200px;
+height: 250px;
+width: 250px;
+-webkit-animation: pulse 5s infinite;
 }
 
 #cuadrado{
-margin:-10px -210px;
+margin: 20px -200px;
+height: 250px;
+width: 250px;
+-webkit-animation: pulse 5s infinite;
 }
 
 #altura{
-margin:-10px -210px;
+margin: 20px -200px;
+height: 250px;
+width: 250px;
+-webkit-animation: pulse 5s infinite;
 }
 
 #conte2{
@@ -4391,7 +4187,7 @@ main section .cuadroT2:nth-child(1):hover > .contents2 p {
   width: 300px;
   height: 190px;
   margin: 140px -520px;
-  animation-duration: 2s;
+  animation-duration: 9s;
   animation-fill-mode: both;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
@@ -4418,7 +4214,7 @@ main section .cuadroT2:nth-child(1):hover > .contents2 p {
   width: 300px;
   height: 190px;
   margin: 180px -135px;
-  animation-duration: 2s;
+  animation-duration: 9s;
   animation-fill-mode: both;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
@@ -4681,7 +4477,7 @@ main section .cuadroT4:before {
   width: 300px;
   height: 190px;
   margin: 140px -520px;
-  animation-duration: 2s;
+  animation-duration: 9s;
   animation-fill-mode: both;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
@@ -4708,7 +4504,7 @@ main section .cuadroT4:before {
   width: 300px;
   height: 190px;
   margin: 180px -135px;
-  animation-duration: 2s;
+  animation-duration: 9s;
   animation-fill-mode: both;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
@@ -4804,14 +4600,14 @@ main section .cuadroT4:before {
   width: 270px;
   height: 150px;
   margin: 220px -80px;
-  animation: float 1s infinite ease-in-out alternate;
+  animation: float 3s infinite ease-in-out alternate;
 }
 
 #impListas {
   width: 270px;
   height: 150px;
   margin: 40px -80px;
-  animation: float 1s infinite ease-in-out alternate;
+  animation: float 3s infinite ease-in-out alternate;
 }
 
 @keyframes float {
@@ -5360,7 +5156,7 @@ data-title {
 }
 
 .box2 pre {
-  margin-left: -23px;
+  margin-left: -400px;
   margin-top: -35px;
 }
 
